2009-09-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.3.50+.
	(OCTAVE_API_VERSION): Now api-v38+.

2009-09-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.3.50.
	(OCTAVE_API_VERSION): Now api-v38.
	(OCTAVE_RELEASE_DATE): Now 2009-09-12.

2009-09-08  Rafael Laboissiere  <rafael@debian.org>

	* pr-output.cc: New test.

2009-09-07  Jaroslav Hajek  <highegg@gmail.com>

	* src/Makefile.in: Add LDFLAGS to OCT_LINK_DEPS.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc: Fix test.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-s-cs.cc: Use DEFCMPLXCMPOP_OP.
	* OPERATORS/op-cs-s.cc: Ditto.
	* OPERATORS/op-fs-fcs.cc: Ditto.
	* OPERATORS/op-fcs-fs.cc: Ditto.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* genprops.awk: Fix formatting of generated output.
	* graphics.h.in (graphics_object::get (const std::string&) const,
	graphics_object::get (const char *) const): New functions.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_manager::do_get_font): Remove spurious
	assignment usd for debugging.

2009-09-04  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_manager::do_get_font, ft_render::set_font,
	ft_render::set_mode, ft_render::visit, ft_render::set_color):
	Issue warnings instead of errors for non-fatal problems.
	(ft_render::visit): If face is null, then return without warning.
	* genprops.awk: Also generate const std::string& and const char*
	versions of the get member functions.
	* gl-render.cc (opengl_renderer::draw): Omit caseless_str
	constructor in call to get method.
	* ft_render::set_font (): Likewise.

2009-09-03  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_format (const Complex&, int&, int&)):
	Avoid passing NaN or Inf to log10.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::assign (assign_op, const octave_value&)):
	Call maybe_mutate after in-place operation.
